--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -12,16 +12,29 @@ h1 {
   margin: 0 auto;
   background: rgba(100%, 100%, 100%, .5);
   margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
 
+}
+
+.parent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.child {
+  position:relative;
+  margin-top: 200px;
 }
 
 #background {
   background-image: url("../img/cloudgif.gif");
   background-size: cover;
   max-width: 1850px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50px;
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
 }
 
 h2 {
